--- a/build.TrungThang.properties
+++ b/build.TrungThang.properties
@@ -2,9 +2,9 @@
 
 #Managed by Liferay IDE (remove this comment to prevent future updates)
 #Thu Feb 08 18:40:32 ICT 2018
-app.server.tomcat.lib.global.dir = E:\\KhoaCNTT\\server\\tomcat-7.0.62\\lib\\ext
-app.server.tomcat.deploy.dir = E:\\KhoaCNTT\\server\\tomcat-7.0.62\\webapps
-app.server.parent.dir = E:\\KhoaCNTT\\server
-app.server.tomcat.dir = E:\\KhoaCNTT\\server\\tomcat-7.0.62
+app.server.tomcat.lib.global.dir = E:\\LuanVan\\server\\tomcat-7.0.62\\lib\\ext
+app.server.tomcat.deploy.dir = E:\\LuanVan\\server\\tomcat-7.0.62\\webapps
+app.server.parent.dir = E:\\LuanVan\\server
+app.server.tomcat.dir = E:\\LuanVan\\server\\tomcat-7.0.62
 app.server.type = tomcat
-app.server.tomcat.portal.dir = E:\\KhoaCNTT\\server\\tomcat-7.0.62\\webapps\\ROOT
+app.server.tomcat.portal.dir = E:\\LuanVan\\server\\tomcat-7.0.62\\webapps\\ROOT
